docs(user): Add documentation for get, create and update user
